WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110885
REGRESSION(
r143986
): fast/files/revoke-blob-url.html asserts
https://bugs.webkit.org/show_bug.cgi?id=110885
Summary
REGRESSION(r143986): fast/files/revoke-blob-url.html asserts
Antti Koivisto
Reported
2013-02-26 09:08:22 PST
For example
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r144053%20(5868)/fast/files/revoke-blob-url-crash-log.txt
This seems to have started with
http://trac.webkit.org/changeset/143986
. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x000000010b3e0f9f WebCore::checkEncodedString(WTF::String const&) + 191 (KURL.cpp:313) 1 com.apple.WebCore 0x000000010b3dbe9a WebCore::KURL::parse(WTF::String const&) + 42 (KURL.cpp:980) 2 com.apple.WebCore 0x000000010b3dbe10 WebCore::KURL::KURL(WebCore::ParsedURLStringTag, WTF::String const&) + 48 (KURL.cpp:340) 3 com.apple.WebCore 0x000000010b3dbdd3 WebCore::KURL::KURL(WebCore::ParsedURLStringTag, WTF::String const&) + 35 (KURL.cpp:341) 4 com.apple.WebCore 0x000000010a82a0e6 WebCore::ResourceRequest::ResourceRequest(WTF::String const&) + 54 (ResourceRequest.h:49) 5 com.apple.WebCore 0x000000010a82a09d WebCore::ResourceRequest::ResourceRequest(WTF::String const&) + 29 (ResourceRequest.h:50) static inline void checkEncodedString(const String& url) { ASSERT_UNUSED(url, url.containsOnlyASCII()); ASSERT_UNUSED(url, url.isEmpty() || isSchemeFirstChar(url[0])); <== this one }
Attachments
possible patch
(1.54 KB, patch)
2013-02-26 09:30 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
less mangled patch
(1.50 KB, patch)
2013-02-26 09:40 PST
,
Antti Koivisto
ap
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2013-02-26 09:30:46 PST
Created
attachment 190306
[details]
possible patch
Antti Koivisto
Comment 2
2013-02-26 09:40:26 PST
Created
attachment 190314
[details]
less mangled patch
Antti Koivisto
Comment 3
2013-02-26 09:52:57 PST
http://trac.webkit.org/changeset/144068
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug