REGRESSION(r143986): fast/files/revoke-blob-url.html asserts https://bugs.webkit.org/show_bug.cgi?id=110885

Reviewed by Alexey Proskuryakov.

The ResourceRequest string constructor assumes that the string is a valid URL. Use KURL constructor instead.

* html/DOMURL.cpp:
(WebCore::DOMURL::revokeObjectURL):



Canonical link: https://commits.webkit.org/129171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144068 268f45cc-cd09-0410-ab3c-d52691b4dbfc